--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,12 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+  <link rel="stylesheet" href="/css/style.css"
   <title>VidJot</title>
 </head>
 <body>
   {{> _navbar }}
 
   <div class="container">
+    {{> _msg }}
     {{{ body }}}
   </div>
 
