--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-  <link rel="stylesheet" href="/css/style.css"
+  <link rel="stylesheet" href="/css/style.css">
   <title>VidJot</title>
 </head>
 <body>
@@ -11,6 +11,7 @@
 
   <div class="container">
     {{> _msg }}
+    {{> _errors }}
     {{{ body }}}
   </div>
 
